# threat_intel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.local.yml  docker-compose.yml  main.py  project_overview.md  pyproject.toml
backend/: .env.example  Dockerfile  RUN_TRACKING_IMPLEMENTATION.md  api.py  check_datasources.py  check_db.py  check_run_ids.py  cleanup_old_rss_items.py  deploy_flows.py  init_db.py  main.py  migrate_add_run_id.py  prefect.yaml  pyproject.toml  query_by_run.py  seed_data_sources.py  start_api.sh  start_worker.sh  test_run_tracking.py  test_scrape_url.py
backend/connectors/: __init__.py  database.py
backend/evaluations/: eval.py  fetch_eval_articles.py  sample_dataset.py
backend/models/: __init__.py  entities.py  schemas.py
backend/outputs/: articles_clustered_summary_1_20260208_171137.xlsx  articles_clustered_summary_2_20260208_171309.xlsx  summary.xlsx
backend/prompts/: article_summary.py  attack_classification.py  clustering.py  rss_extraction.py
backend/rss_regex/: __init__.py  clean_articles.py  fetch_article_content.py  parse_rss_feeds copy.py  parse_rss_feeds.py
backend/rss_regex/config/: __init__.py  source_patterns.py
backend/workflows/: article_clustering.py  clustering.py  filter_attacks.py  generate_summaries.py  get_rss.py
backend/workflows/new_flows/: article_clustering.py  get_link_content.py  parse_rss.py  relevant_article_classification.py
connectors/: __init__.py  database.py
dashboard/: app.py
data_sources/: data_sources.yaml
evaluations/: __init__.py  eval.py
(+25 files in other folders)
